Printing conf to file

--- a/node/device/templates/device.conf
+++ b/node/device/templates/device.conf
@@ -1,14 +1,18 @@
 device {
-  id = {{ device.id }}
+  id = {{ device.config_id }}
   name = "{{ device.name }}"
   protocol = "{{ device.protocol_string }}"
   model = "{{ device.model_string }}"
   parameters {
     house = "{{ device.house }}"
-    unit = "{{ device.unit}}"
+    unit = "{{ device.unit }}"
   }
 }
 {% comment %}
+
+
+
+
 device {
   id =  1
   name = "Example device"
