--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
 language: python
 python:
-  - "3.2"
-  - "3.3"
   - "3.4"
 # command to install dependencies
 install: 
   - pip install -r requirements.txt
 # command to run tests
-script:
-  - python hub/manage.py test 
-  - python node/manage.py test 
+script: "python hub/manage.py test"
 notifications:
   email:
     - jarvis.travis-ci@joelbitar.se
