--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install: 
   - pip install -r requirements.txt
 # command to run tests
-script: "python hub/manage.py test"
+script: runtests.sh
 notifications:
   email:
     - jarvis.travis-ci@joelbitar.se
